# detonator-seed

./: .gitignore  README.md  pyproject.toml
evidence/ds002/: 07_commit2_preflight_notes.md  07_preflight_evidence.md  README.md  report.md  result.json
examples/providers/: live_agent_provider.py  sample_provider.py
examples/real_mutations/: mission.json  seed.py
examples/test_priority/: benchmark.py  holdout.json  holdout_faults.py  mission.json  search.json  seed.py
runs/ds002-corpus/: HOLDOUT_WITHHELD.md  mutants.jsonl  provenance.json  rejected.jsonl  search-matrix.jsonl  selection.json  split.json  tests.json
runs/ds002-preflight/: preflight.json  testmon_masks.json
src/detonator/: __init__.py  __main__.py  _worker.py  kernel.py  mutation_corpus.py  real_mutations.py  real_mutations_preflight.py  real_mutations_publish.py  test_priority.py
tests/: test_ds001.py  test_ds002.py
