[project]
name = "detonator"
version = "0.1.0"
description = "Bounded open-ended mutation kernel for test prioritization (DS-001)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
detonator = "detonator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
package = true
